# AMEDEO-Systems

./: .clang-format  .coverage  .editorconfig  .gitignore  API_README.md  BLOCKCHAIN_README.md  CMakeLists.txt  Dockerfile  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  README.md  TMR_README.md  amedeo_api_server.py  amedeo_cli.py  bandit.json  breakthrough_demo.py  coverage.info  coverage.xml  cybersecurity_compliance_report.json  demo_agent_system.py  demo_evidence.json  demo_self_healing_aeromorphic.py  demo_tmr_backend.py  det_evidence.json  final_tmr_test.py  healthcheck.py  integration_test.py  main.py  requirements.txt  sbom.spdx.json  security_audit.py  signatures.json  test_api_schemas.py  test_blockchain.py  test_breakthrough_analysis.py  test_consensus_logic.py  validate_breakthrough_analysis.py
.githooks/: pre-commit
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
UTCS/: Spec.md  manifest.json  readme.md
agents/: POLICY.md  __init__.py  base_agent.py  buyer_agent.py  intents.py  manifest.yaml  ops_pilot_agent.py  planner_agent.py  readme.md  scheduler_agent.py
aqua_os/: __init__.py  adt.py  qal.py
coverage_html/: index-sort-f.html  index-sort-l.html  index.html
docs/: amedeo_implementation_gap_analysis.md  breakthrough_requirements_quickref.md  technological_breakthroughs_analysis.md  validation_report.md
domains/: __init__.py
examples/: digital_twin_response.json  flight_plan_response.json  system_status_response.json
flight_ops_expertise/: .gitignore  README.md
framework/: UTCS-MI-COMPLIANCE.md  aeic.py  quantum_lattice_optimizer.py
gaia_air_blockchain_production/: docker-compose.yml  genesis_block.json  network-policy.yaml  pdb.yaml  s1000d_header.json  security_report.json
gaia_air_rtos/: __init__.py
include/: HAL_Interface.h  Voter_Interface.h  det.h  poae.h  pqc.h  tsn_sim.h
kernel/: arinc653_partition.c  arinc653_partition.h
latex/: README_elsevier.txt  README_ieee.txt  amedeo_elsevier.tex  main_ieee.tex  refs.bib
reports/: mcdc.html
schemas/: ai_spec_validation.schema.json  aqua-nisq-chip.schema.json  control-plane.schema.json  digital_twin.schema.json  environmental_metrics.schema.json  evidence_record.schema.json  flight_plan.schema.json  qal-backend-aqua.schema.json  qec-lite.schema.json  system_status.schema.json
src/: HAL_Sim.c  Voter_Interface.c  det.c  poae.c  pqc.c  tsn_sim.c
tests/: __init__.py  ata27_flight_ctrl_host.c  test_aeromorphic.py  test_agents.py  test_ci_ad010_structure.py  test_depth.py  test_metrics_normalization.py  test_self_healing.py  test_tmr_backend.py  test_utcs_air_structure.py  test_utcs_space_structure.py
tmr/: __init__.py  consensus.py  core.py  engines.py  validators.py
tools/: auto_complete.py  check_bandit.py  cybersecurity_compliance.py  depth_validator.py  det.py  final_gate.py  (+10 more)
(+218 files in other folders)
